using System;

namespace MSFrame
{

/// <summary>
/// 音频全局设置
/// </summary>
[Serializable]
public class AudioSetting
{
    public float bkMusicValue = 0.1f;
    public float soundValue = 0.1f;
}
}
